# electrum-glc

./: .bandit  .cirrus.yml  .gitignore  .pre-commit-config.yaml  .safety-policy.json  BUILD_RELEASE.sh  CLAUDE.md  ELECTRUM_TECHNICAL_REPORT.md  MODERNIZATION.md  Makefile  README.md  RUN_THIS_LOCALLY.md  TODO_BUILD_v4.5.0.md  build-all-deterministic.sh  build-deterministic-parallel.sh  checkpoints_simple.json  fix_formatting.sh  fix_imports.py  fix_none_checks.patch  fix_po_files.py  fix_val_none.py  pyproject.toml  pyproject.toml.backup  remaining_checkpoints.json  run_electrum  setup.py  test_checkpoints.py  test_migration.py  test_migration_simple.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
Electrum_GLC.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
contrib/: make_libusb.sh
contrib/build-linux/appimage/: Dockerfile  apt.preferences  apt.sources.list  build.sh  make_appimage.sh
contrib/build-wine/: Dockerfile  build-electrum-git-temp.sh  build-electrum-git.sh  build.sh  deterministic.spec  electrum.nsi  install-requirements-deterministic.sh  make_win.sh  prepare-wine.sh
contrib/deterministic-build/: DETERMINISTIC_BUILD_DESIGN.md  Dockerfile.enterprise  IMPLEMENTATION_STATUS.md  build-deterministic.sh  create_package_mirror.py  generate-attestation.py  requirements-binaries.txt  requirements-build-appimage.txt  requirements-build-base.txt  requirements-hw.txt  requirements.txt  verify-build.py
contrib/deterministic-build/apt/: preferences  sources.list
contrib/deterministic-build/attestations/: build-attestation-20250814-121828.json
contrib/deterministic-build/mirror/: manifest.json
contrib/osx/: make_osx.sh
contrib/requirements/: requirements-binaries-mac.txt  requirements-binaries.txt  requirements-dev.txt
electrum/: __init__.py  address_synchronizer.py  base_crash_reporter.py  bip21.py  bip32.py  bip39_recovery.py  bitcoin.py  blockchain.py  channel_db.py  checkpoints.json  checkpoints_test.json  coinchooser.py  commands.py  constants.py  contacts.py  crypto.py  daemon.py  descriptor.py  dns_hacks.py  dnssec.py  ecc.py  ecc_fast.py  exchange_rate.py  i18n.py  interface.py  invoices.py  json_db.py  keystore.py  lnaddr.py  lnchannel.py  lnhtlc.py  lnmsg.py  lnonion.py  lnpeer.py  lnrater.py  lnrouter.py  lnsweep.py  lntransport.py  lnurl.py  lnutil.py  (+34 more)
electrum-test/: pyvenv.cfg
electrum/_vendor/distutils/: version.py
electrum/gui/: __init__.py  default_lang.py  messages.py  stdio.py  text.py
electrum/gui/common_qt/: __init__.py  plugins.py
electrum/gui/qml/: __init__.py  auth.py  qeaddressdetails.py  qeaddresslistmodel.py  qeapp.py  qebip39recovery.py  qebitcoin.py  qechanneldetails.py  qechannellistmodel.py  qechannelopener.py  qeconfig.py  qedaemon.py  qefx.py  qeinvoice.py  qeinvoicelistmodel.py  qelnpaymentdetails.py  qemodelfilter.py  qenetwork.py  qeqr.py  qeqrscanner.py  qerequestdetails.py  qeserverlistmodel.py  qeswaphelper.py  qetransactionlistmodel.py  qetxdetails.py  qetxfinalizer.py  qetypes.py  qewallet.py  qewizard.py  util.py
electrum/gui/qt/: __init__.py  address_dialog.py  address_list.py  (+44 more)
electrum/qrreader/: __init__.py  abstract_base.py  zbar.py
electrum/scripts/: bip39_recovery.py  bip70.py  block_headers.py  bruteforce_pw.py  estimate_fee.py  get_history.py  ln_features.py  peers.py  quick_start.py  servers.py  txbroadcast.py  txradar.py  update_default_servers.py  watch_address.py
electrum/tests/: __init__.py  regtest.py  test_bitcoin.py  test_blockchain.py  test_bolt11.py  test_coinchooser.py  test_commands.py  test_contacts.py  test_daemon.py  test_descriptor.py  test_interface.py  test_invoices.py  test_lnchannel.py  test_lnhtlc.py  test_lnmsg.py  test_lnpeer.py  test_lnrouter.py  test_lntransport.py  test_lnurl.py  test_lnutil.py  test_mnemonic.py  test_mpp_split.py  test_network.py  test_psbt.py  test_revealer.py  test_simple_config.py  test_sswaps.py  test_storage_upgrade.py  test_transaction.py  test_util.py  test_verifier.py  test_wallet.py  test_wallet_vertical.py  test_x509.py
electrum/utils/: stacktracer.py
(+83 files in other folders)
